* Updated Overflow issue in Ios.

--- a/public/global.css
+++ b/public/global.css
@@ -15,6 +15,12 @@ body * {
   outline: none;
   -webkit-tap-highlight-color: transparent;
 }
+body {
+  overflow: hidden;
+}
+body > * {
+  overflow: auto;
+}
 .font-ysabeau {
   font-family: var(--font-ysabeau);
 }
